2003-10-07  Mark Page  <mpagenva@aol.com>

	* nsd/adpeval.c (LogError): Limit the amount of script text added
	into the errorInfo string, to keep from flowing adp script texts
	of unlimited length into the server log.

2003-10-01  Elizabeth Thomas <eathomas93@aol.com>

        * nsd/init.tcl: Fix to _ns_lzproc_load to handle subtle behavior with
        respect to namespaces and the test to see if the proc will be successfully
        recognized. Also, fix to protect against infinite loop on unknown processing
        if null command is executed.

2003-09-22  Mark Page  <mpagenva@aol.com>

        * TAG aolserver_v4_r0_beta_15

2003-09-22  Paul Moosman <pwmoosman@aol.com>

        * nsd/tcljob.c: Add options to ns_job Api, for waitany, delete(queue), 
          listjobs, etc.

2003-09-19  Mark Page  <mpagenva@aol.com>

        * nsd/adprequest.c:
          nsd/adpeval.c: Fix error where 
          xxx.adp --> ns_adp_parse --> ns_adp_include --> ns_adp_puts results in
          the puts text going directly into the final result buffer, rather then
          to the intermediate buffer to be returned by ns_adp_parse to the xxx.adp
          page code.

2003-09-12  Mark Page  <mpagenva@aol.com>

	* TAG aolserver_v4_r0_beta_14

2003-09-11  Elizabeth Thomas  <eathomas93@aol.com>

        * nsd/init.tcl: Add 'lazyproc' functionality. Controlled by 
        ns/parameters config parm 'lazyprocdef' (defaults to 'false')
        When 'true', we do not put proc definitions in the interp
        init script, but instead wrap the tcl 'unknown' command and
        evaluate them on the first reference. Also wraps the tcl 'info'
        command to intercept queries about procs not yet in the interpreter.

2003-09-03  Mark Page  <mpagenva@aol.com>

	* TAG aolserver_v4_r0_beta_13
	* nsd/tclinit.c (NsTclICtlObjCmd): Fix intermittant core dumps
        occurring during oncleanup processing.  The error is in the Tcl_Obj
	for the script passed into ns_ictl on* callbacks was being saved